<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview"
    android:layout_width="550dp"
    android:layout_height="300dp"
    android:layout_gravity="center"
    android:layout_margin="15dp"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:id="@+id/cardviewprincipal"
        android:layout_width="550dp"
        android:layout_height="300dp"
        android:background="#ECECEC"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ciudad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="30dp"
                android:fontFamily="@font/helvetica"
                android:text="@string/ciudad"
                android:textColor="#8E8F8F"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/torneo"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginLeft="30dp"
                android:fontFamily="@font/helveticalight"
                android:text="@string/torneo"
                android:textColor="#8E8F8F"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tvNombre"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helvetica"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="30dp"
                android:text="@string/nombre"
                android:textColor="#8E8F8F"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nombre"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="30dp"
                android:fontFamily="@font/helveticalight"
                android:text="@string/nombre_apellidos"
                android:textColor="#8E8F8F"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tvDni"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="30dp"
                android:fontFamily="@font/helvetica"
                android:text="@string/d_n_i"
                android:textColor="#8E8F8F"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dni"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="98dp"
                android:layout_marginTop="-26dp"
                android:text="@string/_123456789a"
                android:textColor="#8E8F8F"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:id="@+id/linea"
                android:layout_width="0.5dp"
                android:layout_margin="8dp"
                android:layout_height="280dp"
                android:background="#8E8F8F" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvResultado"
                android:layout_width="130dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/helvetica"
                android:text="@string/resultado"
                android:textColor="#8E8F8F"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/resultado"
                android:layout_width="130dp"
                android:layout_height="24dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="21dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/helveticalight"
                android:text="@string/resultado"
                android:textColor="#8E8F8F"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tvNprueba"
                android:layout_width="150dp"
                android:layout_height="24dp"
                android:layout_marginTop="22dp"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/helvetica"
                android:text="@string/n_de_prueba"
                android:textColor="#8E8F8F"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ndepruba"
                android:layout_width="130dp"
                android:layout_height="24dp"
                android:layout_marginTop="7dp"
                android:layout_marginLeft="20dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/helveticalight"
                android:hint="@string/n_de_prueba"
                android:textColor="#8E8F8F"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tvCargo"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginTop="17dp"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/helvetica"
                android:text="@string/cargo"
                android:textColor="#8E8F8F"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cargo"
                android:layout_width="130dp"
                android:layout_height="24dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/helveticalight"
                android:text="@string/cargo"
                android:textColor="#8E8F8F"
                android:textSize="17sp" />

            <Button
                android:id="@+id/btn_analizar"
                android:layout_width="170dp"
                android:layout_height="35dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custon_button_login"
                android:fontFamily="@font/helveticalight"
                android:text="@string/analizar"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btn_informe"
                android:layout_width="170dp"
                android:layout_height="35dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custon_button_login"
                android:fontFamily="@font/helveticalight"
                android:text="Generar Informe"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />
        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>