<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo_procor"
            android:layout_width="300dp"
            android:layout_height="213dp"
            android:layout_marginLeft="476dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="476dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/logo_procor"
            android:cropToPadding="false"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_logo_02" />

        <TextView
            android:id="@+id/elige"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="510dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/helveticalight"
            android:text="@string/elige_tu_torneo"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#9E9E9D"
            android:textSize="35sp" />

        <Spinner
            android:theme="@style/MatchSpinnerTheme"
            android:id="@+id/spinner"
            android:layout_width="520dp"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="380dp"
            android:background="@drawable/custom_edit_text"
            android:spinnerMode="dropdown"
            android:popupBackground="@drawable/dropdown_rounded"
            />

        <Button
            android:id="@+id/btn_Ir"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="540dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/custon_button_login"
            android:fontFamily="@font/helvetica"
            android:text="@string/ir"
            android:textColor="#8D8D8D"
            android:textSize="15sp"
            android:textStyle="bold"
            app:backgroundTint="@null" />

    </LinearLayout>


</LinearLayout>